# RedCode

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
redcode/: __main__.py  lib.py
redcode/lib/: audio.py  general.py  gui.py  notifications.py
redcode/providers/: __init__.py  cumta.py  israelhayom.py  mako.py  oref.py  tzofar.py  walla.py  ynet.py
