[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "redcode"
version = "0.0.5"
description = "A software that alerts when there is an emergency in Israel."
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{name = "Extamov"}]
dependencies = [
	"asyncio",
	"aiohttp[speedups]",
	"numpy",
	"sounddevice",
]

[project.scripts]
redcode = "redcode.__main__:entrypoint"

[tool.setuptools]
package-data = { "assets" = ["redcode/assets/*"] }